INCLUDE_DIRECTORIES (
    ${CMAKE_SOURCE_DIR}/WebCore/svg/
    ${CMAKE_SOURCE_DIR}/WebCore/css
    ${CMAKE_SOURCE_DIR}/WebCore/dom
    ${CMAKE_SOURCE_DIR}/WebCore/page
    ${CMAKE_SOURCE_DIR}/WebCore/html
    ${CMAKE_SOURCE_DIR}/WebCore/loader
    ${CMAKE_SOURCE_DIR}/WebCore/editing
    ${CMAKE_SOURCE_DIR}/WebCore/rendering
    ${CMAKE_SOURCE_DIR}/WebCore/rendering/style
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/VM
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/kjs
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/runtime
    ${CURL_INCLUDE_DIRS}
)

IF (WEBKIT_USE_I18N STREQUAL "GENERIC")
    INCLUDE_DIRECTORIES (
        ${CMAKE_SOURCE_DIR}/JavaScriptCore/icu
    )
ENDIF (WEBKIT_USE_I18N STREQUAL "GENERIC")

FILE (GLOB NETWORK_SYMLINK RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} WK/BC*.h)
FOREACH (FILES ${NETWORK_SYMLINK})
    OWBLN (${FILES} WKAL 0 0)
ENDFOREACH(FILES)




OWBLN (Curl/BCAuthenticationChallengeCurl.h WKAL 0 0)
OWBLN (Curl/BCResourceErrorCurl.h WKAL 0 0)
OWBLN (Curl/BCResourceHandleManagerCurl.h WKAL 0 0)
OWBLN (Curl/BCResourceRequestCurl.h WKAL 0 0)
OWBLN (Curl/BCResourceResponseCurl.h WKAL 0 0)
OWBLN (Curl/BCCookieJarCurl.h WKAL 0 0)
OWBLN (Curl/BCFormDataStreamCurl.h WKAL 1 0)

IF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK")
    INCLUDE_DIRECTORIES (
        ${GTHREAD_INCLUDE_DIRS}
        ${CAIRO_INCLUDE_DIRS}
    )
ENDIF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK")


AUX_SOURCE_DIRECTORY (WK NETWORK_SRC)
AUX_SOURCE_DIRECTORY (Curl NETWORK_SRC)

IF (BUILD_SHARED_LIBS)
    ADD_LIBRARY (bal-network ${NETWORK_SRC})
ELSE (BUILD_SHARED_LIBS)
    ADD_LIBRARY (bal-network STATIC ${NETWORK_SRC})
ENDIF (BUILD_SHARED_LIBS)

TARGET_LINK_LIBRARIES (bal-network ${CURL_LIBRARIES})

INSTALL (TARGETS bal-network
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)
