INCLUDE_DIRECTORIES (
    ${CMAKE_SOURCE_DIR}/WebCore/rendering
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/VM
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/kjs
)

IF (WEBKIT_USE_I18N STREQUAL "GENERIC")
    INCLUDE_DIRECTORIES (
        ${CMAKE_SOURCE_DIR}/WebCore/editing
        ${CMAKE_SOURCE_DIR}/JavaScriptCore/icu
    )
ENDIF (WEBKIT_USE_I18N STREQUAL "GENERIC")


OWBLN (WK/BCAtomicStringWK.h OWBAL 0 0)
OWBLN (WK/BCAtomicStringImplWK.h OWBAL 0 0)
OWBLN (WK/BCBase64WK.h OWBAL 0 0)
OWBLN (WK/BCBidiContextWK.h OWBAL 0 0)
OWBLN (WK/BCBidiResolverWK.h OWBAL 0 0)
OWBLN (WK/BCCStringWK.h OWBAL 0 0)
OWBLN (WK/BCCharacterNamesWK.h OWBAL 0 0)
OWBLN (WK/BCPlatformStringWK.h OWBAL 0 0)
OWBLN (WK/BCRegularExpressionWK.h OWBAL 0 0)
OWBLN (WK/BCSegmentedStringWK.h OWBAL 0 0)
OWBLN (WK/BCStringBufferWK.h OWBAL 0 0)
OWBLN (WK/BCStringHashWK.h OWBAL 0 0)
OWBLN (WK/BCStringImplWK.h OWBAL 0 0)
OWBLN (WK/BCTextCodecWK.h OWBAL 0 0)
OWBLN (WK/BCTextCodecLatin1WK.h OWBAL 0 0)
OWBLN (WK/BCTextCodecUTF16WK.h OWBAL 0 0)
OWBLN (WK/BCTextCodecUserDefinedWK.h OWBAL 0 0)
OWBLN (WK/BCTextDecoderWK.h OWBAL 0 0)
OWBLN (WK/BCTextDirectionWK.h OWBAL 0 0)
OWBLN (WK/BCTextEncodingWK.h OWBAL 0 0)
OWBLN (WK/BCTextEncodingRegistryWK.h OWBAL 0 0)
OWBLN (WK/BCTextStreamWK.h OWBAL 0 0)
OWBLN (WK/BCUTF8WK.h OWBAL/wtf/unicode 0 0)
OWBLN (WK/BCUnicodeRangeWK.h OWBAL 0 0)
OWBLN (WK/BCParserUtilitiesWK.h OWBAL 0 0)
OWBLN (WK/BCStringBuilderWK.h OWBAL 0 0)

IF (WEBKIT_USE_I18N STREQUAL "ICU")
    OWBLN (ICU/BCCollatorICU.h OWBAL/wtf/unicode 0 0)
    OWBLN (ICU/BCTextBoundariesICU.h OWBAL 0 0)
    OWBLN (ICU/BCTextBreakIteratorICU.h OWBAL 0 0)
    OWBLN (ICU/BCTextCodecICU.h OWBAL 1 0)
    OWBLN (ICU/BCUnicodeICU.h OWBAL/wtf/unicode 0 0)
    
    AUX_SOURCE_DIRECTORY (ICU INTERNATIONALIZATION_SRC)
ELSEIF (WEBKIT_USE_I18N STREQUAL "GENERIC")
    OWBLN (Generic/BCCollatorGeneric.h OWBAL/wtf/unicode 0 0)
    OWBLN (Generic/BCTextBoundariesGeneric.h OWBAL 0 0)
    OWBLN (Generic/BCTextBreakIteratorGeneric.h OWBAL 0 0)
    OWBLN (Generic/BCTextCodecICU.h OWBAL 1 0)
    OWBLN (Generic/BCUnicodeGeneric.h OWBAL/wtf/unicode 0 0)
    OWBLN (Generic/BCUnicodeGenericTable.h OWBAL/wtf/unicode 0 0)

    
    AUX_SOURCE_DIRECTORY (Generic INTERNATIONALIZATION_SRC)
ENDIF (WEBKIT_USE_I18N STREQUAL "ICU")

IF (OWBAL_PLATFORM_GRAPHICS STREQUAL "GTK")
    OWBLN (Gtk/BCLocalizedStringsGtk.h OWBAL 0 0)
    OWBLN (Gtk/BCTextBreakIteratorInternalICUGtk.h OWBAL 0 0)
    
    INCLUDE_DIRECTORIES (${GTK2_INCLUDE_DIRS})
    
    AUX_SOURCE_DIRECTORY (Gtk INTERNATIONALIZATION_SRC)
ELSEIF (OWBAL_PLATFORM_GRAPHICS STREQUAL "SDL")
    OWBLN (SDL/BCLocalizedStringsSDL.h OWBAL 0 0)
    OWBLN (SDL/BCTextBreakIteratorInternalICUSDL.h OWBAL 0 0)
    
    AUX_SOURCE_DIRECTORY (SDL INTERNATIONALIZATION_SRC)
ELSEIF (OWBAL_PLATFORM_GRAPHICS STREQUAL "GENERIC")
    OWBLN (Generic/BCLocalizedStringsGeneric.h OWBAL 0 0)
    OWBLN (Generic/BCTextBreakIteratorInternalICUGeneric.h OWBAL 0 0)
    
    AUX_SOURCE_DIRECTORY (Generic/ICU INTERNATIONALIZATION_SRC)
ENDIF (OWBAL_PLATFORM_GRAPHICS STREQUAL "GTK")

AUX_SOURCE_DIRECTORY (WK INTERNATIONALIZATION_SRC)

INCLUDE (Customer/CMakeLists.txt OPTIONAL)

IF (BUILD_SHARED_LIBS)
    ADD_LIBRARY (bal-internationalization ${INTERNATIONALIZATION_SRC})
ELSE (BUILD_SHARED_LIBS)
    ADD_LIBRARY (bal-internationalization STATIC ${INTERNATIONALIZATION_SRC})
ENDIF (BUILD_SHARED_LIBS)

IF (WEBKIT_USE_I18N STREQUAL "ICU")
    TARGET_LINK_LIBRARIES (bal-internationalization ${ICU_LIBRARY})
ENDIF (WEBKIT_USE_I18N STREQUAL "ICU")

IF (OWBAL_PLATFORM_GRAPHICS STREQUAL "GTK")
    TARGET_LINK_LIBRARIES (bal-internationalization ${GTK2_LIBRARIES})
ENDIF (OWBAL_PLATFORM_GRAPHICS STREQUAL "GTK")

INCLUDE (Customer/CMakeLinks.txt OPTIONAL)

INSTALL (TARGETS bal-internationalization
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)
