INCLUDE_DIRECTORIES (
    ${CMAKE_BINARY_DIR}/generated_link/WKAL
)

OWBLN (WK/BCArenaWK.h OWBAL 0 0)
OWBLN (WK/BCAutodrainedPoolWK.h OWBAL 0 0)
OWBLN (WK/BCFastMallocWK.h OWBAL/wtf 0 0)
OWBLN (WK/BCMallocZoneSupportWK.h OWBAL/wtf 0 0)

AUX_SOURCE_DIRECTORY (WK MEMORY_SRC)

IF (BUILD_SHARED_LIBS)
    ADD_LIBRARY (bal-memory ${MEMORY_SRC})
ELSE (BUILD_SHARED_LIBS)
    ADD_LIBRARY (bal-memory STATIC ${MEMORY_SRC})
ENDIF (BUILD_SHARED_LIBS)

INSTALL (TARGETS bal-memory
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)
