INCLUDE_DIRECTORIES (
    ${CMAKE_SOURCE_DIR}/WebCore/svg/
    ${CMAKE_SOURCE_DIR}/WebCore/css
    ${CMAKE_SOURCE_DIR}/WebCore/dom
    ${CMAKE_SOURCE_DIR}/WebCore/page
    ${CMAKE_SOURCE_DIR}/WebCore/html
    ${CMAKE_SOURCE_DIR}/WebCore/loader
    ${CMAKE_SOURCE_DIR}/WebCore/editing
    ${CMAKE_SOURCE_DIR}/WebCore/rendering
    ${CMAKE_BINARY_DIR}/generated_sources/WebCore/svg/
)

IF (WEBKIT_USE_I18N STREQUAL "GENERIC")
    INCLUDE_DIRECTORIES (
        ${CMAKE_SOURCE_DIR}/JavaScriptCore/icu
    )
ENDIF (WEBKIT_USE_I18N STREQUAL "GENERIC")


IF (WEBKIT_USE_FONTS STREQUAL "GTK")
    OWBLN (Gtk/BCFontCustomPlatformDataGtk.h WKAL 0 0)
    OWBLN (Gtk/BCFontPlatformDataGtk.h WKAL 0 0)
    OWBLN (WK/BCSimpleFontDataWK.h WKAL 0 0)
    OWBLN (WK/BCGlyphBufferWK.h WKAL 0 0)
    
    INCLUDE_DIRECTORIES (${GTK2_INCLUDE_DIRS})
    
    AUX_SOURCE_DIRECTORY (Gtk FONTS_SRC)
    AUX_SOURCE_DIRECTORY (Cairo FONTS_SRC)
ELSEIF (WEBKIT_USE_FONTS STREQUAL "FREETYPE")
    OWBLN (Freetype/BCSimpleFontDataFreetype.h WKAL 0 0)
    OWBLN (Freetype/BCFontCustomPlatformDataFreetype.h WKAL 0 0)
    OWBLN (Freetype/BCFontPlatformDataFreetype.h WKAL 0 0)
    OWBLN (Freetype/BCGlyphBufferFreetype.h WKAL 0 0)

    INCLUDE_DIRECTORIES (${SDL_INCLUDE_DIRS})
    INCLUDE_DIRECTORIES (${FREETYPE2_INCLUDE_DIRS})
    INCLUDE_DIRECTORIES (${FONTCONFIG_INCLUDE_DIRS})
    
    AUX_SOURCE_DIRECTORY (Freetype FONTS_SRC)
ELSEIF (WEBKIT_USE_FONTS STREQUAL "EMBEDDED")
    OWBLN (Embedded/BCSimpleFontDataEmbedded.h WKAL 0 0)
    OWBLN (Embedded/BCFontCustomPlatformDataEmbedded.h WKAL 0 0)
    OWBLN (Embedded/BCFontPlatformDataEmbedded.h WKAL 0 0)
    OWBLN (Embedded/BCGlyphBufferEmbedded.h WKAL 0 0)
    
    INCLUDE_DIRECTORIES (${SDL_INCLUDE_DIRS})

    AUX_SOURCE_DIRECTORY (Embedded FONTS_SRC)
ENDIF (WEBKIT_USE_FONTS STREQUAL "GTK")

OWBLN (WK/BCFontWK.h WKAL 0 0)
OWBLN (WK/BCFontCacheWK.h WKAL 0 0)
OWBLN (WK/BCFontDataWK.h WKAL 0 0)
OWBLN (WK/BCFontDescriptionWK.h WKAL 0 0)
OWBLN (WK/BCFontFallbackListWK.h WKAL 0 0)
OWBLN (WK/BCFontFamilyWK.h WKAL 0 0)
OWBLN (WK/BCFontSelectorWK.h WKAL 0 0)
OWBLN (WK/BCGlyphPageTreeNodeWK.h WKAL 0 0)
OWBLN (WK/BCFontRenderingModeWK.h WKAL 0 0)
OWBLN (WK/BCGlyphWidthMapWK.h WKAL 0 0)
OWBLN (WK/BCSegmentedFontDataWK.h WKAL 0 0)
OWBLN (WK/BCStringTruncatorWK.h WKAL 0 0)
OWBLN (WK/BCFontTraitsMaskWK.h WKAL 0 0)

AUX_SOURCE_DIRECTORY (WK FONTS_SRC)

INCLUDE (Customer/CMakeLists.txt OPTIONAL)

IF (BUILD_SHARED_LIBS)
    ADD_LIBRARY (bal-fonts ${FONTS_SRC})
ELSE (BUILD_SHARED_LIBS)
    ADD_LIBRARY (bal-fonts STATIC ${FONTS_SRC})
ENDIF (BUILD_SHARED_LIBS)

IF (WEBKIT_USE_FONTS STREQUAL "GTK")
    TARGET_LINK_LIBRARIES (bal-fonts 
		${GTK2_LIBRARIES}
		${FREETYPE2_LIBRARIES}
		${FONTCONFIG_LIBRARIES}
	)
ELSEIF (WEBKIT_USE_FONTS STREQUAL "FREETYPE")
    TARGET_LINK_LIBRARIES (bal-fonts
		${SDL_LIBRARIES}
		${FREETYPE2_LIBRARIES}
		${FONTCONFIG_LIBRARIES}
	)
ENDIF (WEBKIT_USE_FONTS STREQUAL "GTK")

INCLUDE (Customer/CMakeLinks.txt OPTIONAL)

INSTALL (TARGETS bal-fonts
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)

