INCLUDE_DIRECTORIES (
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/VM
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/kjs
    ${CMAKE_SOURCE_DIR}/WebCore/css
    ${CMAKE_SOURCE_DIR}/WebCore/dom
    ${CMAKE_SOURCE_DIR}/WebCore/editing
    ${CMAKE_SOURCE_DIR}/WebCore/html
    ${CMAKE_SOURCE_DIR}/WebCore/loader
    ${CMAKE_SOURCE_DIR}/WebCore/loader/archive
    ${CMAKE_SOURCE_DIR}/WebCore/page
    ${CMAKE_SOURCE_DIR}/WebCore/rendering
    ${CMAKE_SOURCE_DIR}/WebCore/rendering/style
    ${CMAKE_BINARY_DIR}/generated_link/WKAL
)

IF (WEBKIT_USE_I18N STREQUAL "GENERIC")
    INCLUDE_DIRECTORIES (
        ${CMAKE_SOURCE_DIR}/JavaScriptCore/icu
    )
ENDIF (WEBKIT_USE_I18N STREQUAL "GENERIC")

IF (WEBKIT_USE_SVG)
    INCLUDE_DIRECTORIES (
        ${CMAKE_SOURCE_DIR}/WebCore/svg
    )
ENDIF (WEBKIT_USE_SVG)
IF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK" 
    OR ${WEBKIT_USE_FILESYSTEM} STREQUAL "GTK"
    OR ${WEBKIT_USE_SYSTEMTIME} STREQUAL "GTK")
    INCLUDE_DIRECTORIES (${GTK2_INCLUDE_DIRS})
ENDIF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK" 
    OR ${WEBKIT_USE_FILESYSTEM} STREQUAL "GTK"
    OR ${WEBKIT_USE_SYSTEMTIME} STREQUAL "GTK")

FILE (GLOB FACILITIES_WK_SYMLINK RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} WK/BC*.h)
FILE (GLOB FACILITIES_COMMON_SYMLINK RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} Common/BC*.h)
FOREACH (FILES ${FACILITIES_WK_SYMLINK} ${FACILITIES_COMMON_SYMLINK})
    OWBLN (${FILES} OWBAL 0 0)
ENDFOREACH (FILES)

#FIXME add implementation for GTK
OWBLN (Linux/BCFileIOLinux.h OWBAL 0 0)


IF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK")
    OWBLN (Gtk/BCLanguageGtk.h OWBAL 0 0)
    
    LIST (APPEND FACILITIES_SRC
        Gtk/BCFileChooserGtk.cpp
        Gtk/BCLanguageGtk.cpp
        Gtk/BCLoggingGtk.cpp
        Gtk/BCMIMETypeRegistryGtk.cpp
    )

    LIST (APPEND FACILITIES_SRC
        Linux/BCFileIOLinux.cpp
    )
ELSEIF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "SDL")
    OWBLN (SDL/BCLanguageSDL.h OWBAL 0 0)
    
    LIST (APPEND FACILITIES_SRC
        SDL/BCFileChooserSDL.cpp
        SDL/BCLanguageSDL.cpp
        SDL/BCLoggingSDL.cpp
        SDL/BCMIMETypeRegistrySDL.cpp
    )

    INCLUDE_DIRECTORIES (${SDL_INCLUDE_DIRS})
ENDIF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK")

IF (${WEBKIT_USE_FILESYSTEM} STREQUAL "GTK")
    OWBLN (Gtk/BCFileSystemGtk.h OWBAL 0 0)
    
    LIST (APPEND FACILITIES_SRC
        Gtk/BCFileSystemGtk.cpp
    )
ELSEIF (${WEBKIT_USE_FILESYSTEM} STREQUAL "POSIX")
    OWBLN (Posix/BCFileSystemPosix.h OWBAL 0 0)
    
    AUX_SOURCE_DIRECTORY (Posix FACILITIES_SRC)
ENDIF (${WEBKIT_USE_FILESYSTEM} STREQUAL "GTK")

IF (${WEBKIT_USE_SYSTEMTIME} STREQUAL "GTK")
    OWBLN (Gtk/BCSystemTimeGtk.h OWBAL 0 0)
    OWBLN (Gtk/BCSharedTimerGtk.h OWBAL 0 0)
    
    LIST (APPEND FACILITIES_SRC
        Gtk/BCSystemTimeGtk.cpp
	Gtk/BCSharedTimerGtk.cpp
    )
ELSEIF (${WEBKIT_USE_SYSTEMTIME} STREQUAL "LINUX")
    OWBLN (Linux/BCSystemTimeLinux.h OWBAL 0 0)
    OWBLN (Linux/BCSharedTimerLinux.h OWBAL 0 0)
    
    AUX_SOURCE_DIRECTORY (Linux FACILITIES_SRC)
ENDIF (${WEBKIT_USE_SYSTEMTIME} STREQUAL "GTK")

AUX_SOURCE_DIRECTORY (WK FACILITIES_SRC)
AUX_SOURCE_DIRECTORY (Common FACILITIES_SRC)

INCLUDE (Customer/CMakeLists.txt OPTIONAL)

IF (BUILD_SHARED_LIBS)
    ADD_LIBRARY (bal-facilities ${FACILITIES_SRC})
ELSE (BUILD_SHARED_LIBS)
    ADD_LIBRARY (bal-facilities STATIC ${FACILITIES_SRC})
ENDIF (BUILD_SHARED_LIBS)

IF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK" 
    OR ${WEBKIT_USE_FILESYSTEM} STREQUAL "GTK"
    OR ${WEBKIT_USE_SYSTEMTIME} STREQUAL "GTK")
    TARGET_LINK_LIBRARIES (bal-facilities ${GTK2_LIBRARIES})
ENDIF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK" 
    OR ${WEBKIT_USE_FILESYSTEM} STREQUAL "GTK"
    OR ${WEBKIT_USE_SYSTEMTIME} STREQUAL "GTK")
    
INSTALL (TARGETS bal-facilities
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)
